--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 
 html,
 body {
-	background-color: black;
+	background-color: #181818;
 	font-family: 'Rubik';
 	font-weight: normal;
 	color:white;
