--- a/components/instructionsComponent/instructionsComponent.module.css
+++ b/components/instructionsComponent/instructionsComponent.module.css
@@ -14,6 +14,10 @@
 	flex-direction: column;
 	align-items: center;
 }
+.header{
+	align-items:center;
+	justify-content: center;
+}
 
 .header_container .header{
     line-height: 3em;
@@ -61,25 +65,42 @@ border-radius: 8px;
 	gap: 1.5rem;
     color: white;
 }
+.amount_container{
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem; /* Adjust the gap as needed */
+	border-bottom:solid 1px white;
+	max-width:25%;
+	margin: 0 auto; /* Centers the container horizontally */
+	padding-bottom:10px;
+	padding-top:10px;
+
+}
 
 .button{
 	display: flex;
-flex-direction: row;
-align-items: center;
-justify-content: center;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
 
-padding: 24px 32px;
-gap: 12px;
+	padding: 24px 32px;
+	gap: 12px;
 
-width: 392px;
-height: 80px;
+	width: 392px;
+	height: 80px;
 
-background: rgba(0, 0, 0, 0.9);
-/* Grayscale/Metal */
-box-shadow: 2px 2px 3px rgb(142, 142, 142);
-border-radius: 12px;
-cursor: pointer;
-transition: all .5s;
+	background: rgba(0, 0, 0, 0.9);
+	/* Grayscale/Metal */
+	box-shadow: 2px 2px 3px rgb(142, 142, 142);
+	border-radius: 12px;
+	cursor: pointer;
+	transition: all .5s;
+}
+
+.buttons_container{
+	display:flex;
+	align-items:center;
 }
 
 .button:hover{
@@ -94,3 +115,44 @@ font-style: normal;
 font-size: 18px;
 line-height: 28px;
 }
+
+.mintImage {
+	max-width: 25%; /* Ensure the image is not wider than its container */
+	height: auto; /* Maintain the aspect ratio of the image */
+	margin-top: 1em; /* Space above the image */
+	margin-bottom: 1em; /* Space below the image */
+	border-radius: 8px; /* Optional: if you want rounded corners */
+  }
+
+  .line_container{
+	display:flex;
+	flex-direction: column;
+	max-width:20%;
+	margin: 0 auto; /* Centers the container horizontally */
+  }
+  .balance_container{
+  	display:flex;
+	flex-direction: row;
+	align-items:center; 
+	justify-content:center;
+	border-bottom:solid 1px white;
+	max-width: 25%;
+	margin: 0 auto;
+	padding-bottom: 10px;
+  }
+
+  .field_title{
+	text-align:left;
+	flex:1;
+  }
+  .field_amount{
+	display:flex;
+	justify-content:flex-end;
+	flex-direction:row;
+	flex:1;
+  }
+  .total_container{
+	display:flex;
+	margin: 0 auto;
+	max-width:25%;
+  }
