--- a/components/instructionsComponent/instructionsComponent.module.css
+++ b/components/instructionsComponent/instructionsComponent.module.css
@@ -64,8 +64,8 @@
 	justify-content: center;
 	align-items: center;
 	gap: 1rem; /* Adjust the gap as needed */
-	border-bottom:solid 1px white;
-	max-width:60%;
+	border-bottom:solid 2px white;
+	max-width:80%;
 	margin: 0 auto; /* Centers the container horizontally */
 	padding-bottom:1px;
 	padding-top:1px;
@@ -113,6 +113,7 @@
 .mintImage {
 	max-width: 50%; /* Ensure the image is not wider than its container */
 	height: auto; /* Maintain the aspect ratio of the image */
+	max-height: 400px;
 	margin-top: 1em; /* Space above the image */
 	margin-bottom: 1em; /* Space below the image */
 	border-radius: 8px; /* Optional: if you want rounded corners */
@@ -146,7 +147,7 @@
 .total_container{
 	display:flex;
 	margin: 0 auto;
-	max-width:60%;
+	max-width:80%;
 	padding-top: 1px;
 }
 
@@ -155,8 +156,8 @@
 	flex-direction: row;
 	align-items:center; 
 	justify-content:center;
-	border-bottom:solid 1px white;
-	max-width: 60%;
+	border-bottom:solid 2px white;
+	max-width: 80%;
 	margin: 0 auto;
 	padding-bottom: 1px;
 }
